# libmcc

./: Makefile.am  README.md
mcc/: Makefile.am
mcc/usb/: Makefile.am
