CLEANFILES =
DISTCLEANFILES =
EXTRA_DIST =
BUILT_SOURCES =

pkglibdir = $(libdir)/mcc-usb
pkglib_LTLIBRARIES = libmcc-usb.la

headersdir = $(includedir)/mcc-usb-@VERSION@/
headers = pmd.h \
		  usb-500.h \
		  usb-1608G.h \
		  usb-20X.h \
		  usb-1208FS-Plus.h \
		  usb-1608FS-Plus.h \
		  usb-2020.h \
          usb-ctr.h \
		  usb-2600.h \
		  usb-2408.h \
		  usb-2416.h \
		  usb-1608HS.h \
		  usb-1208HS.h \
		  usb-2001-tc.h \
          usb-1024LS.h \
		  usb-1208LS.h \
		  usb-1608FS.h \
		  usb-7202.h \
		  usb-tc.h \
		  usb-dio24.h \
		  usb-dio96H.h \
          usb-5200.h \
		  usb-temp.h \
		  usb-7204.h \
		  usb-1208FS.h \
		  usb-ssr.h \
		  usb-erb.h \
		  usb-pdiso8.c \
          usb-1408FS.h \
		  usb-1616FS.h \
		  usb-3100.h \
		  usb-4303.h \
		  usb-tc-ai.h \
		  usb-dio32HS.h \
		  usb-tc-32.h \
          bth-1208LS.h
